maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:6: error: not found: value verfifierMurGauche
  while(!verfifierMurGauche()){
         ^IslandMaze:31: error: value North is not a member of object plm.universe.Direction
  setDirection(Direction.North)
                         ^